[package]
name = "equalia"
version = "1.0.0"
authors = ["Peter Vrba <phonkee@pm.me>"]
edition = "2018"
description = "Automatically implement PartialEq for your structs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/phonkee/equalia/"
readme = "README.md"
keywords = ["equal", "equality", "eq"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "equalia"
proc-macro = true

[dependencies]
darling = "0.12.2"
proc-macro2 = "1"
quote = "1"
syn = "1"