[package]
name = "equalia-derive"
version = "0.1.0"
authors = ["phonkee <phonkee@pm.me>"]
edition = "2018"
description = "Automatically implement PartialEq for your structs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "equalia_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"